--- a/styles.css
+++ b/styles.css
@@ -32,14 +32,14 @@ header {
   grid-template: 150px 150px 150px / 150px 150px 150px;
 }
 
-#item-1 {
+.item-1 {
   grid-row: 1 / 2;
   grid-column: 1 / 2;
   border-right: 1px solid #191d2b;
   border-bottom: 1px solid #191d2b;
 }
 
-#item-2 {
+.item-2 {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
   border-left: 1px solid #191d2b;
